[TT #1738] Improve docs of PARROT_ERROR_*_FLAG Paul_the_Greek++

--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -249,6 +249,10 @@ These fall out from the logical vtables deprecation.
 
 L<https://trac.parrot.org/parrot/ticket/1655>
 
+=item errorson, errorsoff operations [eligible in 2.7]
+
+The C<.PARROT_ERRORS_GLOBAL_FLAG> flag will be eliminated. It is not used by Parrot.
+
 =back
 
 =head1 Bytecode
