pre-release 2.7.0 commit

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 #1 $Id$
 
+2010.08.17     mikehh
+    * Released 2.7.0
+    See NEWS for more.
+
 2010.07.10     coke
 	* Released 2.6.0
 	See NEWS for more.
