experimental Parrot_getpid function, TT #1564

--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -147,6 +147,12 @@ Use isatty instead.
 
 L<https://trac.parrot.org/parrot/ticket/1689>
 
+=item Method getpid on ParrotInterpreter [experimental]
+
+Used to test the experimental function Parrot_getpid
+
+L<https://trac.parrot.org/parrot/ticket/1564>
+
 =back
 
 =head1 Opcodes
@@ -382,6 +388,12 @@ L<https://trac.parrot.org/parrot/ticket/1628>
 Use Parrot_get_runtime_path instead.
 
 L<https://trac.parrot.org/parrot/ticket/1191>
+
+=item Parrot_getpid [experimental]
+
+Get process id, experimental.
+
+L<https://trac.parrot.org/parrot/ticket/1564>
 
 =back
 
