--- a/docs/project/release_manager_guide.pod
+++ b/docs/project/release_manager_guide.pod
@@ -410,7 +410,7 @@ L<http://www.google.com/calendar/render?cid=ldhctdamsgfg5a1cord52po9h8@group.cal
  - Oct 19, 2010 - 2.9*  - gerd
  - Nov 16, 2010 - 2.10  - tcurtis
  - Dec 21, 2010 - 2.11  - whiteknight
- - Jan 18, 2011 - 3.0*  - ??
+ - Jan 18, 2011 - 3.0*  - cotto
  - Feb 15, 2011 - 3.1   - mikehh
  - Mar 15, 2011 - 3.2   - ??
  - Apr 19, 2011 - 3.3*  - ??
